samples/_failures_safe/1761267219_d02b77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efce5ecf.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_efce5ecf.c:153:35: error: missing terminating " character
  153 |         case TOKEN_NUMBER: printf("NUMBER
      |                                   ^~~~~~~
./samples/SAFE/__tmp_efce5ecf.c:153:9: error: expected expression at end of input
  153 |         case TOKEN_NUMBER: printf("NUMBER
      |         ^~~~
./samples/SAFE/__tmp_efce5ecf.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efce5ecf.c:153:9: error: expected declaration or statement at end of input
